--- a/templates/static_index.html
+++ b/templates/static_index.html
@@ -1,10 +1,9 @@
 {% extends 'static_base.html' %}
-{% load staticfiles %}
 {% block title %}天天生鲜-首页{% endblock title %}
 {% block topfiles %}
-	<script type="text/javascript" src="{% static 'js/jquery-1.12.4.min.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/jquery-ui.min.js' %}"></script>
-	<script type="text/javascript" src="{% static 'js/slide.js' %}"></script>
+	<script type="text/javascript" src="/static/js/jquery-1.12.4.min.js"></script>
+	<script type="text/javascript" src="/static/js/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="/static/js/slide.js"></script>
 {% endblock topfiles %}
 {% block body %}
 	<div class="navbar_con">
